--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -231,7 +231,7 @@
 				title="Filter" src="Images/filter11.png" />
 			<img id="disk02" style="position: absolute; left: 250px; top: 65px;width:160px;height:100px;visibility:hidden"
 				title="Filter" src="Images/filter11.png" />
-			<img id="line1" style="position: absolute; left: 140px; top: 190px; width: 110px; visibility: hidden;" src="Images/line1.png">			
+			<img id="line1" style="position: absolute; left: 140px; top: 190px; width: 110px; visibility: hidden;" src="Images/line1.png">
 			<p id="font1" style="visibility: hidden;position:absolute;top:250px;left:5px;color:red">Filter Disks<br>
 				(Highly Permeable)</p>
 			<img id="line2" style="position: absolute; left: 320px; top: 70px;width:20px;visibility: hidden;"
@@ -488,9 +488,8 @@
 
 		<!--Blinking Arrow	-->
 		<img class="" id="arrow1" style="visibility:hidden" src="Images/arrow1.png" />
-
-		<div id="copyright"> &copy; 2021 SOLVE - The Virtual Lab @ NITK Surathkal, Department of Water Resources & Ocean
-			Engineering</div>
+		
+			<div id="copyright"> &copy; 2021 - <script>document.write(new Date().getFullYear())</script> SOLVE - The Virtual Lab @ NITK Surathkal, Department of Water Resources & Ocean Engineering</div>
 </body>
 
 </html>
